--- a/BigOTest/build.xml
+++ b/BigOTest/build.xml
@@ -3,15 +3,15 @@
     <!--this file was created by Eclipse Runnable JAR Export Wizard-->
     <!--ANT 1.7 is required                                        -->
     <target name="create_run_jar">
-        <jar destfile="C:/Projects/git-repositories/big-o-test.git/BigOTest/build/BigOTest.jar" filesetmanifest="mergewithoutmain">
+        <jar destfile="./build/BigOTest.jar" filesetmanifest="mergewithoutmain">
             <manifest>
                 <attribute name="Main-Class" value="com.sw_engineering_candies.big_o_test.internal.Version"/>
                 <attribute name="Class-Path" value="."/>
             </manifest>
-            <fileset dir="C:/Projects/git-repositories/big-o-test.git/BigOTest/bin"/>
-            <zipfileset excludes="META-INF/*.SF" src="C:/Projects/git-repositories/big-o-test.git/BigOTest/lib/javassist.jar"/>
-            <zipfileset excludes="META-INF/*.SF" src="C:/Projects/git-repositories/big-o-test.git/BigOTest/lib/guava-15.0.jar"/>
-            <zipfileset excludes="META-INF/*.SF" src="C:/Projects/git-repositories/big-o-test.git/BigOTest/lib/commons-math3-3.2.jar"/>
+            <fileset dir="./bin"/>
+            <zipfileset excludes="META-INF/*.SF" src="./lib/javassist.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="./lib/guava-15.0.jar"/>
+            <zipfileset excludes="META-INF/*.SF" src="./lib/commons-math3-3.2.jar"/>
         </jar>
     </target>
 </project>
