--- a/BigOTest/.settings/org.eclipse.jdt.ui.prefs
+++ b/BigOTest/.settings/org.eclipse.jdt.ui.prefs
@@ -7,7 +7,7 @@ cleanup.add_missing_nls_tags=false
 cleanup.add_missing_override_annotations=true
 cleanup.add_missing_override_annotations_interface_methods=true
 cleanup.add_serial_version_id=false
-cleanup.always_use_blocks=false
+cleanup.always_use_blocks=true
 cleanup.always_use_parentheses_in_expressions=false
 cleanup.always_use_this_for_non_static_field_access=false
 cleanup.always_use_this_for_non_static_method_access=false
@@ -43,11 +43,11 @@ cleanup.remove_unused_private_types=true
 cleanup.sort_members=false
 cleanup.sort_members_all=false
 cleanup.use_blocks=true
-cleanup.use_blocks_only_for_return_and_throw=true
+cleanup.use_blocks_only_for_return_and_throw=false
 cleanup.use_parentheses_in_expressions=false
-cleanup.use_this_for_non_static_field_access=false
+cleanup.use_this_for_non_static_field_access=true
 cleanup.use_this_for_non_static_field_access_only_if_necessary=true
-cleanup.use_this_for_non_static_method_access=false
+cleanup.use_this_for_non_static_method_access=true
 cleanup.use_this_for_non_static_method_access_only_if_necessary=true
 cleanup_profile=_MSP
 cleanup_settings_version=2
