--- a/big-o-test/pom.xml
+++ b/big-o-test/pom.xml
@@ -11,6 +11,13 @@
 
 	<description>Big-O-Test</description>
 
+	<properties>
+		<java.version>1.8</java.version>
+		<encoding>UTF-8</encoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
+
 	<dependencies>
 
 		<dependency>
@@ -72,9 +79,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.14.1</version>
-				<configuration>
-					<argLine>-Xint</argLine>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
