--- a/big-o-test/pom.xml
+++ b/big-o-test/pom.xml
@@ -59,6 +59,12 @@
             <version>${version.junit-jupiter-api}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>5.3.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
